content/en/blog/2024/l7-policy-with-opa/authorizationPolicy.yaml
  apiVersion: security.istio.io/v1beta1
  kind: AuthorizationPolicy
  metadata:
    name: my-opa-authz
    namespace: istio-system # This enforce the policy on all the mesh being istio-system the mesh config namespace
  spec:
    selector:
      matchLabels:
        ext-authz: enabled
    action: CUSTOM
    provider:
      name: "opa.local"
    rules: [{}] # Empty rules, it will apply to selectors with ext-authz: enabled label
